--- a/site01/index.html
+++ b/site01/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <header> 
-       <h1>Escolha uma das opção abaixo para calcular o perimetro e área ! </h1>
+        <div class="cabeca">
+            <h1>PERIMETRO </h1>
+            <h2>&</h2>
+            <h1>AREA</h1>
+        </div>
     </header>
     <main>
-        <ul>
-            <li>Quadrado</li>
-            <li> triangulo</li>
-            <li>circulo</li>
-        </ul>
+        <div>
+            <ul class="opcao">
+                <li><img src="assets/download.png" alt=""></li>
+                <li><img src="assets/download (1).png" alt=""><li>
+                <li><img src="assets/download (2).png" alt=""></li>
+            </ul>
+        </div>  
     </main>
     <footer>
 
