--- a/Lost Puppy Finder/index.html
+++ b/Lost Puppy Finder/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost Puppy Finder</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="cor_fundo">
-    <header></header>
-    <main>
-        
-        <button onclick="mudar_cor()">Mudar cor</button>
-    
+<body style="background-color: aqua;">
+    <header>
+        <h1>Puppy Finder</h1>
+    </header>
+    <main style="background-color: black;">
+
     </main>
-    <footer></footer>
-    <script src="mudar_cor.js"></script>
 </body>
 </html>
