--- a/Lost Puppy Finder/index.html
+++ b/Lost Puppy Finder/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lost Puppy Finder</title>
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
-<body style="background-color: aqua;">
-    <header>
-        <h1>Puppy Finder</h1>
-    </header>
-    <main style="background-color: black;">
-
-    </main>
+<body>
+    <button id="encontrarCachorrinho">Encontrar Cachorrinho</button>
+    <div id="parque">
+      <img src="assets/img/pexels-anna-shvets-4588435.jpg" alt="Cachorrinho Perdido">
+    </div>
+  
+    <script src="mudar_cor.js"></script>
 </body>
 </html>
